tests/src/frontend/typechecking/invalid/no_common_base.sk
fun main(): void {
  void
}
class X()
class Y()

fun test(c: Bool): _ {
  if (c) X() else Y()
}
